--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   drift: ^2.21.0
   drift_flutter: ^0.2.1
 
+  # Routing
+  go_router: ^17.0.1
+
   # Logging
   stack_trace: ^1.11.1
   sentry_flutter: ^8.9.0
@@ -77,6 +80,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.14.1
   flutter_native_splash: ^2.4.2
   build_runner: ^2.10.4
+  go_router_builder: ^4.1.3
 
 flutter:
   uses-material-design: true
