--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   fake_async: ^1.3.1
   package_info_plus: ^8.1.0
   flutter_gen: ^5.12.0
+  theme_tailor: ^3.1.2
 
 dev_dependencies:
   # Testing
