--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
     "drift"
   ],
   "dart.lineLength": 100,
-  "dart.flutterSdkPath": ".fvm/versions/3.38.0"
+  "dart.flutterSdkPath": ".fvm/versions/3.38.0",
+  "arb-editor.suppressedWarnings": [
+    "missing_metadata_for_key"
+  ],
 }
