--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,3 +1,3 @@
 arb-dir: lib/src/core/constant/localization/translations
-template-arb-file: intl_en.arb
+template-arb-file: intl_ru.arb
 output-localization-file: app_localizations.dart
