--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,11 @@
     {
       "name": "dev",
       "request": "launch",
-      "type": "dart"
+      "type": "dart",
+      "program": "lib/main.dart",
+      "args": [
+        "--dart-define-from-file=env/.dev.env"
+      ],
     },
     {
       "name": "profile",
