--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   equatable: ^2.0.8
   mask_text_input_formatter: ^2.9.0
   smooth_page_indicator: ^2.0.1
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   # Testing
@@ -88,6 +89,7 @@ dev_dependencies:
   flutter_native_splash: ^2.4.2
   build_runner: ^2.10.4
   go_router_builder: ^4.1.3
+  json_serializable: ^6.11.3
 
 flutter:
   uses-material-design: true
